--- a/app/css/menu.css
+++ b/app/css/menu.css
@@ -2,30 +2,30 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 2rem;
-
+  gap: 1rem;
   margin-top: 2vh;
 }
 
 .tab {
-  background: linear-gradient(#575757, #2c2c2c);
-
-  color: rgb(255, 255, 255);
-
+  background-color: #de9f27;
+  color: rgb(0, 0, 0);
   font-weight: bold;
-
   height: 6vh;
   width: 10vw;
-  font-size: 14;
+  font-size: 16px;
   display: flex;
   align-items: center;
   flex-direction: column;
   /* align-items: center; */
   /* text-align: center; */
-
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   cursor: pointer;
+}
+
+.tab.active {
+  background-color: #2F2921;
+  color: #fff;
 }
 
 .tab-cordinadores {
