--- a/app/css/menu.css
+++ b/app/css/menu.css
@@ -29,7 +29,7 @@
   color: #fff;
 }
 
-.tab-cordinadores {
+.tab-coordinadores {
   margin-left: 10px;
 }
 
@@ -37,3 +37,4 @@
   margin-left: auto;
   margin-right: 10px;
 }
+
