--- a/app/css/style.css
+++ b/app/css/style.css
@@ -75,14 +75,12 @@ h1{
 .table-data tr{
   background-color:#dedede;
 }
-/* .separador{
-  border-left: 5px solid red;
-} */
+
 .table-data tr:hover {
-  background-color: #cfcfcf;
+  background-color: #c2c0c0;
 }
 .table-data tr:nth-child(even):hover {
-  background-color: #e2e2e2;
+  background-color: #cfcfcf;
 }
 
 .table-data td {
@@ -137,4 +135,7 @@ h1{
   border: none;
   border: 1px solid #de9f27;
   box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+}
+tbody tr{
+  border-left:5px solid rgb(23, 36, 219);
 }
