--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8,23 +8,24 @@ html{
 }
 
 body {
-  padding: 10px;
+  padding: 0px;
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
 .container-data{
   display: flex;
   flex-direction: row;
-  width: 120vw;
-  overflow: hidden;
+  width: auto;
+  overflow-x: hidden;
+  margin: 0 10px;
 }
 
 .wrapper {
-  width: 100%;
+  width: auto;
   display: none;
   /* padding: 0 15px; */
-  /* position: absolute;
-  overflow-x: hidden; */
+  /* position: absolute; */
+  overflow-x: auto; 
 }
 .title{
   display: flex;
@@ -94,6 +95,7 @@ h1{
   border-radius: 3px;
 }
 
+
 .porcent {
   width: 40px;
 }
@@ -135,6 +137,44 @@ h1{
   border: 1px solid #de9f27;
   box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
 }
-tbody tr{
-  border-left:5px solid rgb(23, 36, 219);
+
+/* Mensaje Login */
+.card-mensaje{
+  display: flex;
+  flex-direction: column ;
+  justify-content: center;
+  align-items: center;
+  width:500px;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: #000;
+  border-radius: 20px;
+}
+h1{
+  text-align: center;
+}
+.texto-card{
+  text-align: center;
+  font-weight:bold;
+  font-size: larger;
+}
+.img-card{
+  padding: 20px;
+  width:150px;
+}
+.container-permisos{
+  width: 100vw;
+  height: 100vh;
+  background-image: url("https://grupoconcordia.com/wp-content/uploads/2018/08/Grupo-concordia.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.overlay{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 0;
 }
